# go_cpp

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat
src/: Stone.h  Tile.h  board.cpp  board.h  main.cpp  stone.cpp
